# advisorbot

./: .gitignore  CMakeLists.txt  README.md
src/: AppMain.cpp  AppMain.h  ApplicationMain.cpp  ApplicationMain.h  CSVReader.cpp  CSVReader.h  ChatMain.cpp  ChatMain.h  CommandProcessor.cpp  CommandProcessor.h  LinearRegression.cpp  LinearRegression.h  MerkelMain.cpp  MerkelMain.h  OrderBook.cpp  OrderBook.h  OrderBookEntry.cpp  OrderBookEntry.h  main.cpp
src/commands/: help.cpp  help.h
test/: CMakeLists.txt  CSVReaderBoostSplitMmap_test.cpp  CSVReaderBoostSplit_test.cpp  CSVReaderBoostTokenizer_test.cpp  CSVReaderOrigTokenize_test.cpp  LinearRegression_test.cpp  test_main.cpp
